welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:2: error: value White is not a member of object java.awt.Color
  setCouleurBrosse(Color.White())
                         ^